renamed PermutationIterator to Combination Iterator. Introduced new parameter to the TSP callable which now allows to set the number of tries with different seeds from outside