@@ -1,7 +1,7 @@
 package test.de.westranger.optimization.common.algorithm.tools;
 
 import com.google.gson.Gson;
-import de.westranger.optimization.common.util.PermutationIterator;
+import de.westranger.optimization.common.util.CombinationIterator;
 import de.westranger.optimization.common.util.ProgressTracker;
 import java.io.InputStreamReader;
 import java.text.DecimalFormat;
@@ -22,7 +22,7 @@ import test.de.westranger.optimization.common.algorithm.example.tsp.common.Probl
 import test.de.westranger.optimization.common.algorithm.example.tsp.sa.SimulatedAnnealingTest;
 import test.de.westranger.optimization.common.algorithm.tools.util.TSPCallable;
 
-public class OptimizeParameter {
+public final class OptimizeParameter {
 
   public static void main(String[] args) {
 
@@ -34,44 +34,45 @@ public class OptimizeParameter {
 
     final LinkedHashMap<String, List<Double>> input = new LinkedHashMap<>();
 
-    input.put("tMax", Arrays.asList(0.0));
+    final int numTries = 1;
+
+    input.put("tMax", List.of(0.0));
     input.put("initialAcceptanceRatio", Arrays.asList(0.9, 0.8, 0.7));
     input.put("gamma", Arrays.asList(0.7, 0.8, 0.9, 0.95, 0.96, 0.97, 0.98, 0.99, 0.999));
     input.put("tMin", Arrays.asList(0.001, 0.01, 0.1, 1.0, 10.0, 100.0, 1000.0));
     input.put("omegaMax",
-        Arrays.asList(100.0, 250.0, 500.0, 1000.0, 2500.0, 5000.0, 10000.0, 25000.0, 50000.0));
+        Arrays.asList(100.0, 250.0, 500.0, 1000.0, 2500.0, 5000.0, 10000.0, 25000.0, 50000.0,
+            100000.0));
     input.put("maxImprovementPerTemperature",
         Arrays.asList(2.0, 5.0, 10.0, 25.0, 50.0, 100.0, 250.0, 500.0));
 
-// {avg_score=1.1714766111E12, gamma=0.999, initialAcceptanceRatio=0.9, iter=1.511582724E8, maxImprovementPerTemperature=5.0, omegaMax=10000.0, score=7750.0, tMax=0.0, tMin=0.001}
-// {avg_score=1.2468726692028261E11, gamma=0.999, initialAcceptanceRatio=0.9, iter=7014834.1, maxImprovementPerTemperature=2.0, omegaMax=500.0, score=17774.79911039986, tMax=0.0, tMin=0.001}
     final InputStreamReader reader = new InputStreamReader(
-        SimulatedAnnealingTest.class.getResourceAsStream("/1_vehicle_29_orders.json"));
+        SimulatedAnnealingTest.class.getResourceAsStream("/tsp/1_vehicle_194_orders.json"));
     final Gson gson = new Gson();
     final ProblemFormulation problem = gson.fromJson(reader, ProblemFormulation.class);
     final int threadPoolSize = 15;
     final int batchSize = 100;
-    final PermutationIterator permutationIterator = new PermutationIterator(input);
-    final ProgressTracker pt = new ProgressTracker(permutationIterator.getNumPermutations());
+    final CombinationIterator combinationIterator = new CombinationIterator(input);
+    final ProgressTracker pt = new ProgressTracker(combinationIterator.getNumCombinations());
 
     System.out.println(
-        "starting parameter optimization, there are " + permutationIterator.getNumPermutations() +
-            " parameter permutations which will be evaluated");
+        "starting parameter optimization, there are " + combinationIterator.getNumCombinations() +
+            " parameter combinations which will be evaluated");
 
-    while (permutationIterator.hasNext()) {
+    while (combinationIterator.hasNext()) {
       final ExecutorService executorService = Executors.newFixedThreadPool(threadPoolSize);
       final CompletionService<Map<String, Double>> completionService =
           new ExecutorCompletionService<>(executorService);
 
       int totalTasksSubmitted = 0;
-      for (int i = 0; i < batchSize && permutationIterator.hasNext(); i++) {
-        final Map<String, Double> permutation = permutationIterator.next();
-        final Callable<Map<String, Double>> task = new TSPCallable(problem, permutation);
+      for (int i = 0; i < batchSize && combinationIterator.hasNext(); i++) {
+        final Map<String, Double> combination = combinationIterator.next();
+        final Callable<Map<String, Double>> task = new TSPCallable(problem, combination, numTries);
         completionService.submit(task);
         totalTasksSubmitted++;
       }
 
-      pt.nextRound(permutationIterator.getPermutationCounter());
+      pt.nextRound(combinationIterator.getCombinationCounter());
       final long current = System.currentTimeMillis();
       System.out.println(
           "[" + sdf.format(new Date(current)) + "] submitted next batch of " + batchSize +
@@ -81,24 +82,17 @@ public class OptimizeParameter {
 
       executorService.shutdown();
 
-      // Process completed tasks from this batch
       for (int i = 0; i < totalTasksSubmitted; ++i) {
         try {
           Future<Map<String, Double>> future = completionService.take();
-          ; // Blocks until at least one is complete
           Map<String, Double> result = future.get();
-          // Verarbeiten Sie das Ergebnis wie gewünscht
           if (bestScore > result.get("score") ||
               (Math.abs(bestScore - result.get("score")) < 1e-3 && minIter > result.get("iter"))) {
             System.out.println('\t' + result.toString());
             bestScore = result.get("score");
             minIter = result.get("iter");
-          } else {
-            //System.out.println(result.toString());
           }
-        } catch (InterruptedException e) {
-          throw new RuntimeException(e);
-        } catch (ExecutionException e) {
+        } catch (InterruptedException | ExecutionException e) {
           throw new RuntimeException(e);
         }
       }
